# radiod

./: .gitignore  API.md  Cargo.toml  LICENSE  README.md  config.example.toml  devenv.nix  index.html  install.sh  radio-devil.desktop  radio-devil.service  radiod.desktop  radiod.service
.github/workflows/: release.yml
.plans/: 01-core.md  02-orbox.md  03-mpris.md  04-control.md  05-lastfm.md  06-config-watch.md  07-package.md
radio-devil-ctl/: Cargo.toml
radio-devil-ctl/src/: main.rs
radio-devild/: Cargo.toml
radio-devild/src/: config.rs  control.rs  main.rs  metadata.rs  mpris.rs  orbox.rs  player.rs
radiod/: Cargo.toml
radiod-ctl/: Cargo.toml
radiod-ctl/src/: main.rs
radiod/src/: config.rs  config_watcher.rs  control.rs  main.rs  metadata.rs  mpris.rs  orbox.rs  player.rs  station.rs
