[package]
name = "radio-devild"
version.workspace = true
edition.workspace = true
license.workspace = true

[dependencies]
gstreamer = "0.23"
anyhow = "1"
serde = { version = "1", features = ["derive"] }
toml = "0.8"
dirs = "6"
tokio = { version = "1", features = ["rt-multi-thread", "macros", "sync", "signal"] }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
reqwest = { version = "0.12", default-features = false, features = ["json", "rustls-tls"] }
serde_json = "1"
zbus = { version = "4", default-features = false, features = ["tokio"] }
notify = { version = "8", default-features = false }
notify-debouncer-mini = "0.6"
