[package]
name = "radiod"
version.workspace = true
edition.workspace = true
license.workspace = true

[dependencies]
libmpv2 = "6.0.0"
anyhow = "1"
serde = { version = "1", features = ["derive"] }
toml = "0.8"
dirs = "6"
tokio = { version = "1", features = ["rt-multi-thread", "macros", "sync", "signal"] }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
ureq = { version = "3", features = ["json"] }
zbus = { version = "4", default-features = false, features = ["tokio"] }
notify = { version = "8", default-features = false }
notify-debouncer-mini = "0.6"

[dev-dependencies]
serde_json = "1"
